<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:layout_marginBottom="48dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.MonitorEditActivity"
        tools:showIn="@layout/activity_monitor_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/monitor_edit_item_margin"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_detail_type" />

                <TextView
                    android:id="@+id/type_text_view"
                    style="@style/ListText.Title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/monitor_edit_text_height"
                    android:gravity="center_vertical"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/option_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/monitor_edit_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_name" />

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/monitor_edit_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_service" />

                    <EditText
                        android:id="@+id/service_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/monitor_edit_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_duration" />

                    <EditText
                        android:id="@+id/duration_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/monitor_edit_text_width"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_metric" />

                    <EditText
                        android:id="@+id/metric_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/monitor_edit_item_margin"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_warning" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/operator_spinner"
                            android:layout_width="@dimen/monitor_edit_spinner_width"
                            android:layout_height="match_parent" />

                        <EditText
                            android:id="@+id/warning_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/monitor_edit_warning_hint"
                            android:inputType="numberDecimal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_critical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/operator_pair_spinner"
                            android:layout_width="@dimen/monitor_edit_spinner_width"
                            android:layout_height="match_parent" />

                        <EditText
                            android:id="@+id/critical_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/monitor_edit_critical_hint"
                            android:inputType="numberDecimal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monitor_detail_not_interval" />

                    <EditText
                        android:id="@+id/notification_interval_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/monitor_edit_text_height"
                        android:inputType="number" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_detail_scope" />

                <EditText
                    android:id="@+id/scopes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/monitor_edit_text_height"
                    android:hint="@string/monitor_edit_scope_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitor_detail_ex_scope" />

                <EditText
                    android:id="@+id/exclude_scopes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/monitor_edit_text_height"
                    android:hint="@string/monitor_edit_scope_hint" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
