<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MetricsEditActivity"
    tools:showIn="@layout/activity_metrics_edit">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_label_black_24dp"
            style="@style/IconActive"
            android:layout_marginRight="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/label"
            android:hint="@string/metrics_edit_label_hint"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_timeline_black_24dp"
            style="@style/IconActive"
            android:layout_marginRight="16dp"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/metric_0"
            android:hint="@string/metrics_edit_metric0_hint"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/metric_1"
        android:hint="@string/metrics_edit_metric1_hint"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

</LinearLayout>
